# Barcode

./: .gitignore  .gitmodules  Barcode.sln  Barcode.vcxproj  Barpy.cpp  CMakeLists.txt  LICENCE  README.md  barconstructor.h  barpy.pyd  cpp.hint  crAll.bat  fix.diff  runServ.bat  test.sh
.github/: build_manylinux.sh
.github/workflows/: python-build-n-publish.yml  python-build.yml  python-linux.yml  python-publish.yml  python-windows.yml
BarUI/: App.axaml  App.axaml.cs  BarUI.csproj  Program.cs  ViewLocator.cs
BarUI/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
BarUI/Views/: MainWindow.axaml  MainWindow.axaml.cs
Barbrow/: ImageCov.cs  MainWindow.axaml
Barbrow/Models/: ImageModel.cs
Barbrow/ViewModels/: ImageViewModel.cs
Barbrow/Views/: ImageControl.axaml  ImageControl.axaml.cs
ModuleTests/: BarcodeTests.cpp  ModuleTests.vcxproj  ModuleTests.vcxproj.filters  pch.h  test.cpp
PrjBarGUI/Barcode/: backend.cpp  backend.h
PrjBarlib/: Barcode.vcxproj  Barcode.vcxproj.filters  CMakeLists.txt  CMakeLists_proj.txt  detection.h  make.sh  make_linux.sh  make_win.bat  make_xos.sh  output_array.json  output_object.json  premake5.lua  test.sh
PrjBarlib/Tests/: bartest.py  build.sh  premake5.lua
PrjBarlib/Tests/files/tiff/: sample_640×426.tiff.aux.xml
PrjBarlib/Tests/src/: BarcodeTests.cpp  TiffTests.cpp
PrjBarlib/algorithmes/: ExportStats.h  compression.h  comprssWave.h  detection.h  noise.h  prep.h  roofs.h
PrjBarlib/extra/: Barpy.cpp  CellEater.h  GenCommand.h  GenCommon.h  MachineProcessor.h  Neuro.cpp  barcodeCreatorCloud.cpp  barcodeCreatorCloud.h  include_py.h  pytemplcalsses.h
PrjBarlib/include/: CellAutomat.h  CellAutomatProcessor.h  CellEater.h  CellMachine.h  GenCommand.h  GenCommon.h  MachineProcessor.h  barImg.h  barclasses.h  barcodeCreator.h  barcodeCreatorCloud.h  barline.h  barscalar.h  barstrucs.h  component.h  hole.h  include_py.h  presets.h  pytemplcalsses.h  temp.py
PrjBarlib/modules/: BarImg.ixx  BarTypes.ixx  Barcode.ixx  Barcode.ixx.pre  Barcoded.ixx  Barline.ixx  Barscalar.ixx  BinFile.h  BinStateFileWrapper.ixx  IReader.ixx.pre  ImageReader.h  ImageReader.ixx  ReaderTypes.h  StateBinFile.h  StateBinFile.ixx  StateBinFiles.ixx  TiffReader.ixx  base.h  contour.cpp  contour.h  convertation.cpp  convertion.h  decoder.h  imgui.ini  tiffreader.cpp  tiffreader.h
PrjBarlib/modules/python/: correct_types.py  example.ipynb  example.py  example_old.py  make_package.bat  make_package.sh
PrjBarlib/modules/python/BarcodeProject/: README.md  ex.py  pyproject.toml  setup.cfg  setup.py  test.sh
PrjBarlib/modules/python/BarcodeProject/raster_barcode/: barcode.py
PrjBarlib/modules/python/BarcodeProject/raster_barcode.egg-info/: PKG-INFO  SOURCES.txt
PrjBarlib/modules/python/module/: __init__.py  setup.py
PrjBarlib/modules/sidesrc/: fast_float.h
PrjBarlib/modules/sidesrc/flat_hash_map/: flat_hash_map.hpp  unordered_map.hpp
PrjBarlib/researching/: coll.py  coords.txt  ds.py  hsv_tresh.py  maos  maps.py
PrjBarlib/side/flat_hash_map/: unordered_map.hpp
PrjBarlib/source/: Barpy.cpp  Source.cpp  barclasses.cpp  barcodeCreator.cpp  barcodeCreatorCloud.cpp  component.cpp  compress.cpp  hole.cpp  tests.h
PrjCSharpLib/: BarSharp.csproj  Class1.cs
PrjCSharpLib/Properties/: launchSettings.json
PrjTests/: BarcodeTests.cpp  BarcodeTests.vcxproj  BarcodeTests.vcxproj.filters  CMakeLists.txt
PrjTests/data/: 2.json  lables.txt  rects.txt  traningData.txt
PrjUtils/: BarWrapperUtility.csproj  Parser.cs  Program.cs  Reader.cs  WrapperCreator.cs
PrjUtils/Properties/: launchSettings.json
Utils/PrjCWrapper/: c_wrapper.cpp  c_wrapper.h
Utils/cpp2modlue/: Parser.cs  Program.cs  ToModule.cs  WrapperCreator.cs
cdoc/выф/include/: Component.h  Hole.h  barcode.h  barcodeCreator.h  point.h
cdoc/выф/source/: Component.cpp  Hole.cpp  Source.cpp  barcode.cpp  barcodeCreator.cpp  detectKnolls.cpp
include/: barImg.h  barclasses.h  barcode.h  barcodeCreator.h  barconstructor.h  barcontainer.h  barline.h  barstrucs.h  component.h  hole.h  point.h  presets.h
source/: Source.cpp  barclasses.cpp  barcode.cpp  barcodeCreator.cpp  barcodeCreator_old.cpp  barconstructor.cpp  barcontainer.cpp  component.cpp  hole.cpp  point.cpp
