[metadata]
name = raster_barcode
version = 1.0.0
description = A Python package wrapping the Bar library.
author = Art A
author_email = your.email@example.com
url = https://your_project_website_or_repo
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
packages = find:
include_package_data = True
python_requires = >=3.13
install_requires =
    numpy
    matplotlib

[options.package_data]
raster_barcode = libbarpy.so;platform_system=='Linux',
    libbarpy.pyi,
    ibbarpy.so;platform_system=='Macos',
    ibbarpy.pyd;platform_system=='Windows',
